# dataenv-openenv-hackathon

./: .dockerignore  Dockerfile  README.md  __init__.py  app.py  baseline.py  client.py  data_generator.py  env.py  graders.py  inference.py  models.py  openenv.yaml  publish_to_hf.py  pyproject.toml  requirements.txt  reward.py  tasks.py  validate-submission.sh  validate.py
dataenv/: __init__.py  env.py  models.py  server.py
dataenv/data_generators/: __init__.py  generate_easy.py  generate_hard.py  generate_medium.py
dataenv/graders/: __init__.py  common.py  grader_easy.py  grader_hard.py  grader_medium.py
dataenv/tasks/: __init__.py  common.py  task_easy.py  task_hard.py  task_medium.py
server/: __init__.py  app.py
tests/: test_env.py  test_graders.py  test_tasks.py
