[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataenv"
version = "1.0.0"
description = "OpenEnv-compatible data pipeline debugging environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openenv-core[core]>=0.2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "openai>=1.12.0",
    "python-multipart>=0.0.9",
    "httpx>=0.26.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["dataenv*", "server*"]
